src/styles/global.css
/* ... */
*,
*::after,
*::before {
  box-sizing: border-box;
}

html,
body {
  color: var(--color-text-base);
  font-family: var(--font-family);
  font-size: var(--font-size-base);
  font-weight: var(--font-weight-base);
  line-height: var(--line-height-base);
  margin: 0;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  box-sizing: border-box;
}

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: var(--color-black);
  line-height: var(--line-height-heading);
  font-weight: 600;
  margin: 1rem 0;
}

h1 {
  font-size: 2.5rem;
}

h2 {
  font-size: 2rem;
  font-weight: 400;
}

h4 {
  text-transform: uppercase;
  letter-spacing: 0.04rem;
  color: #888;
  font-weight: 400;
}

a,
a:visited,
a:active {
  text-decoration: none;
  color: #7ecece;
}

section {
  padding: 3rem 0;
}

.section-contain {
  max-width: 1100px;
  margin: 0 auto;
}

p {
  padding-bottom: 1.5rem;
}

/* -- Buttons -- */

.btn {
  font-size: 14px;
  font-family: inherit;
  font-weight: 500;
  -ms-flex-item-align: center;
  align-self: center;
  background-color: #e9ebeb;
  border: 0;
  border-radius: 6px;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  color: #0e1e24;
  display: inline-block;
  line-height: 20px;
  min-width: 36px;
  outline: 0;
  padding: 8px;
  position: relative;
  text-align: center;
  text-decoration: none;
  vertical-align: middle;
  width: auto;
  cursor: pointer;
}

.btn.btnprimary {
  background-color: #009387;
  color: #fff;
}

.btn.btndark {
  background-color: #0e3d46;
  color: #fff;
}

/* -- Avatar -- */
.avatar {
  width: 30px;
  height: 30px;
  border-radius: 1000px;
  margin-right: 7px;
}

/* -- Utility -- */

.intro {
  padding: 150px 0;
}

@media screen and (min-width: 900px) {
  .intro {
    padding: 150px 0 0 0;
  }
}

.uppercase {
  text-transform: uppercase;
}

.row {
  display: grid;
  grid-template-rows: repeat(1, 1fr);
  grid-row-gap: 30px;
  grid-column-gap: 30px;
}

@media screen and (min-width: 768px) {
  .row {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media screen and (min-width: 900px) {
  .row {
    grid-template-columns: repeat(3, 1fr);
  }
}

.margintop-md {
  margin-top: 50px;
}

.margintop-lg {
  margin-top: 100px;
}

.px3 {
  padding-left: 3rem;
  padding-right: 3rem;
}

.prose p {
  margin-bottom: 1rem;
}

/* ---- SVG STYLES ----- */

/* Radar */

.radar {
  margin: 15px 0 40px;
}

.radar text {
  fill: #ccc;
  font-size: 14px;
  font-family: 'Roboto', sans-serif;
}

.radar circle,
.radar polyline {
  fill: none;
  stroke: rgb(53, 53, 53);
  stroke-width: 1px;
}

.radar .shape {
  mask: url(#Mask);
}

/* Astronaut */

.astronaut .cls-1 {
  mask: url(#mask);
}

.astronaut .cls-2,
.astronaut .cls-4 {
  mix-blend-mode: multiply;
}

.astronaut .cls-2 {
  fill: url(#linear-gradient);
}

.astronaut .cls-3 {
  mask: url(#mask-2);
}

.astronaut .cls-4 {
  fill: url(#linear-gradient-2);
}

.astronaut .cls-5 {
  fill: #d9cdcc;
}

.astronaut .cls-6 {
  fill: #e9dedc;
}

.astronaut .cls-7 {
  fill: #c7bebd;
}

.astronaut .cls-8 {
  fill: #f1f4f6;
}

.astronaut .cls-9 {
  fill: #a8a8a8;
}

.astronaut .cls-10 {
  fill: #cecece;
}

.astronaut .cls-11,
.astronaut .cls-67 {
  fill: #6d6d6d;
}

.astronaut .cls-12 {
  fill: #cecdc8;
}

.astronaut .cls-13 {
  fill: #9c9b99;
}

.astronaut .cls-14 {
  fill: #bbb8b3;
}

.astronaut .cls-15 {
  fill: #eae6e7;
}

.astronaut .cls-16 {
  fill: url(#GradientFill_50);
}

.astronaut .cls-17 {
  fill: #797979;
}

.astronaut .cls-18,
.astronaut .cls-79 {
  fill: #fff;
}

.astronaut .cls-19 {
  fill: #f3f4ed;
}

.astronaut .cls-20 {
  fill: #d2d4c8;
}

.astronaut .cls-21 {
  fill: url(#GradientFill_49);
}

.astronaut .cls-22 {
  fill: #f0f0f6;
}

.astronaut .cls-23 {
  fill: #b5a3a2;
}

.astronaut .cls-24 {
  fill: #d3cecf;
}

.astronaut .cls-25 {
  fill: #bfaea4;
}

.astronaut .cls-26 {
  fill: #a9948c;
}

.astronaut .cls-27 {
  fill: #7a6163;
}

.astronaut .cls-28 {
  fill: #f4f3ee;
}

.astronaut .cls-29 {
  fill: url(#GradientFill_48);
}

.astronaut .cls-30 {
  fill: #b9aca3;
}

.astronaut .cls-31 {
  fill: #c0b0ae;
}

.astronaut .cls-32 {
  fill: #806866;
}

.astronaut .cls-33 {
  fill: url(#GradientFill_47);
}

.astronaut .cls-34 {
  fill: #f6efec;
}

.astronaut .cls-35 {
  fill: #f5efee;
}

.astronaut .cls-36 {
  fill: #ded7d4;
}

.astronaut .cls-37 {
  fill: #f6f6f1;
}

.astronaut .cls-38 {
  fill: #5d3c47;
}

.astronaut .cls-39 {
  fill: #b9a198;
}

.astronaut .cls-40 {
  fill: #0b0505;
}

.astronaut .cls-41 {
  fill: #e1dad0;
}

.astronaut .cls-42,
.astronaut .cls-58 {
  fill: #c8bcb3;
}

.astronaut .cls-43 {
  fill: #ae9999;
}

.astronaut .cls-44 {
  fill: #eae2dd;
}

.astronaut .cls-45 {
  fill: #c7b4ad;
}

.astronaut .cls-46 {
  fill: #a38889;
}

.astronaut .cls-47 {
  fill: #706467;
}

.astronaut .cls-48 {
  fill: #cec1b7;
}

.astronaut .cls-49 {
  fill: #1b1114;
}

.astronaut .cls-50 {
  fill: #e6cfc2;
}

.astronaut .cls-51 {
  fill: #f3e3d7;
}

.astronaut .cls-52 {
  fill: #d2b8a6;
}

.astronaut .cls-53 {
  fill: url(#GradientFill_32);
}

.astronaut .cls-54 {
  fill: #9b9088;
}

.astronaut .cls-55 {
  fill: #9f9f9f;
}

.astronaut .cls-56 {
  fill: #e0e0e0;
}

.astronaut .cls-57 {
  fill: url(#linear-gradient-3);
}

.astronaut .cls-59 {
  fill: #050505;
}

.astronaut .cls-60 {
  fill: #886a69;
}

.astronaut .cls-61 {
  fill: #cee6e7;
}

.astronaut .cls-62 {
  fill: #fdffff;
}

.astronaut .cls-63 {
  fill: url(#GradientFill_17);
}

.astronaut .cls-64 {
  fill: #110505;
}

.astronaut .cls-65 {
  fill: #866871;
}

.astronaut .cls-66 {
  fill: #70463f;
}

.astronaut .cls-68 {
  fill: #ac9593;
}

.astronaut .cls-69 {
  fill: #686668;
}

.astronaut .cls-70 {
  fill: #9b827f;
}

.astronaut .cls-71 {
  fill: #cbbebd;
}

.astronaut .cls-72 {
  fill: url(#GradientFill_45);
}

.astronaut .cls-73 {
  fill: #907e6e;
}

.astronaut .cls-74 {
  fill: #7a6b5d;
}
/* ... */

